Final API loubardise

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 AWS_ACCESS_KEY_ID=AKIASTJTWKFYV72V5UVO
 AWS_SECRET_KEY=xulZj9mh4nX7wjPs6nvkGVEBMfl5cpcx2iqanyLv
-AWS_BUCKET=myloubardiseclient
+AWS_BUCKET = myloubardiseclient
