--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.937.0",
+    "multer": "^1.4.2",
+    "sharp": "^0.28.3"
   }
 }
